--- a/linear_regression_boston_housing_price.ipynb
+++ b/linear_regression_boston_housing_price.ipynb
@@ -533,16 +533,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8c5d0c06-24d9-46ac-eb65-ab3ca92d6edf"
+        "outputId": "e0b63374-9f60-42cf-f6d4-3c806b227163"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import r2_score\n",
         "\n",
         "lin_model = LinearRegression()\n",
         "lin_model.fit(X_train, Y_train)"
       ],
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +555,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 27
         }
       ]
     },
@@ -565,9 +566,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 232
+          "height": 187
         },
-        "outputId": "a1934711-0431-4b3f-8d45-0d0acc5a752d"
+        "outputId": "5b64b0f2-c0b6-4e71-e78f-7f51df223304"
       },
       "source": [
         "# Evaluate our model using RMSE and R2-score.\n",
@@ -592,18 +593,23 @@
         "print('RMSE is {}'.format(rmse))\n",
         "print('R2 score is {}'.format(r2))"
       ],
-      "execution_count": 26,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-912060d10466>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0my_train_predict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlin_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mrmse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_predict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mr2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_predict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The model performance for training set\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'r2_score' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "The model performance for training set\n",
+            "--------------------------------------\n",
+            "RMSE is 5.6371293350711955\n",
+            "R2 score is 0.6300745149331701\n",
+            "\n",
+            "\n",
+            "The model performance for testing set\n",
+            "--------------------------------------\n",
+            "RMSE is 5.137400784702911\n",
+            "R2 score is 0.6628996975186952\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
